Bug 271628 - Can't collapse holiday trees
Summary: Can't collapse holiday trees
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kholidays (other bugs)
Version First Reported In: 4.8.97 (RC2)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: John Layt
URL:
Keywords:
: 278999 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-24 17:35 UTC by Todd
Modified: 2012-07-20 02:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Todd 2011-04-24 17:35:03 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

The holidays settings list in plasma digital clock acts as a tree, with holiday sets within a certain country as leafs of the tree.  The tree has triangular expanders.  However, clicking an expander does not hide the leafs of the tree as it does elsewhere in KDE.  

This is misleading and inconsistent with the rest of KDE.  It would be nice if the triangular expanders were removed, or if expanding and hiding parts of the tree was supported.

Reproducible: Always
Comment 1 Janek Bevendorff 2012-06-13 18:39:16 UTC
Can confirm for 4.8.80.
Comment 2 Janek Bevendorff 2012-06-13 18:41:19 UTC
*** Bug 278999 has been marked as a duplicate of this bug. ***
Comment 3 Anne-Marie Mahfouf 2012-06-13 18:45:19 UTC
The bug is in KHolidays::HolidayRegionSelector which is used by this configuration dialog to display the holidays countries tree.
Comment 4 Allen Winter 2012-07-20 02:46:19 UTC
Git commit 1d0c48ea0d0ec30b80937186922173b818c947cc by Allen Winter.
Committed on 20/07/2012 at 04:45.
Pushed by winterz into branch 'master'.

allow the tree items to be collapsed.
FIXED-IN: 4.8.5
MERGE: 4.8, 4.9

M  +1    -1    kholidays/holidayregionselector.cpp

http://commits.kde.org/kdepimlibs/1d0c48ea0d0ec30b80937186922173b818c947cc
Comment 5 Allen Winter 2012-07-20 02:46:46 UTC
Git commit 4823bf2027226718def6578b6dd328750cb8965b by Allen Winter.
Committed on 20/07/2012 at 04:45.
Pushed by winterz into branch 'KDE/4.8'.

allow the tree items to be collapsed.
FIXED-IN: 4.8.5
MERGE: 4.8, 4.9
(cherry picked from commit 1d0c48ea0d0ec30b80937186922173b818c947cc)

M  +1    -1    kholidays/holidayregionselector.cpp

http://commits.kde.org/kdepimlibs/4823bf2027226718def6578b6dd328750cb8965b
Comment 6 Allen Winter 2012-07-20 02:47:04 UTC
Git commit 60d00f4de72634be4a7362497142a69abe54ff5c by Allen Winter.
Committed on 20/07/2012 at 04:45.
Pushed by winterz into branch 'KDE/4.9'.

allow the tree items to be collapsed.
FIXED-IN: 4.8.5
MERGE: 4.8, 4.9
(cherry picked from commit 1d0c48ea0d0ec30b80937186922173b818c947cc)

M  +1    -1    kholidays/holidayregionselector.cpp

http://commits.kde.org/kdepimlibs/60d00f4de72634be4a7362497142a69abe54ff5c