allow the tree items to be collapsed.

BUG: 271628
FIXED-IN: 4.8.5
MERGE: 4.8, 4.9
(cherry picked from commit 1d0c48ea0d0ec30b80937186922173b818c947cc)